# supernova_log

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CCache.cmake  ClangTidy.cmake  CompilerWarnings.cmake  Cppcheck.cmake  Custom.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
include/supernova/: configuration.h.in
src/log/: CMakeLists.txt
src/log/include/log/: log_message_sink.h  logger.h  logging_attributes.h  text_color.h
src/log/src/: log_message_sink.cpp  log_message_sink.h  logger.cpp  logger.h  logging_attributes.h  text_color.cpp  text_color.h
tests/log/: logger_test.cpp
